--- a/exam/question3.tex
+++ b/exam/question3.tex
@@ -48,6 +48,6 @@ $$a_1\equiv a_2,\, b_1\equiv b_2\Rightarrow a_1\cdot b_1\equiv a_2\cdot b_2$$
 \begin{dfn}[Фактор-алгебра]
 Множество классов эквивалентности по отношению к конгруэнтности
 \end{dfn}
-
+\textcolor{red}{Тут должно быть больше теорем}
 
 \end{document}
