--- a/exam/question4.tex
+++ b/exam/question4.tex
@@ -2,7 +2,5 @@
 
 \begin{document}
 \section{Декартовы произведения, тождества, многообразия}
-%% my chapter 1 content
-%%
-%% more of my chapter 1 content
+\textcolor{red}{Что в этой главе}
 \end{document}
