--- a/exam/question6.tex
+++ b/exam/question6.tex
@@ -91,15 +91,16 @@ $$a^{x+y}=a^k=a^{i+(x+y-i)mod(j-i)}$$
 
 \end{proof}
 \end{thm}
-
+\textcolor{red}{
 \begin{dfn}[Моноид типа $(i,j-i)$]
 Моноид типа $(i,j-i)$ - моноид с элементами $$???$$
-\end{dfn}
+\end{dfn}}
 
+\textcolor{red}{
 \begin{thm}
 В моноиде типа $(i,j-i)$, где $i>0$ существует идемпотент $b\neq e$
 \begin{proof}
-
+???
 \end{proof}
-\end{thm}
+\end{thm}}
 \end{document}
