--- a/exam/question8.tex
+++ b/exam/question8.tex
@@ -45,8 +45,12 @@ $s_3$ & $x$ & $x$& $e$ & $x$& $e$ & $x$ \\
 \end{tabular}
 \end{table}
 \end{exm}
-
+\textcolor{red}{
+\begin{dfn}[Определяющее соотношение]
+???
+\end{dfn}}
+\textcolor{red}{
 \begin{exm}[задание групп определяющими соотношениями]
-
-\end{exm}
+Нужно кинуть какой-нибудь пример
+\end{exm}}
 \end{document}
