--- a/exam/question9.tex
+++ b/exam/question9.tex
@@ -481,20 +481,21 @@ $a^r=e\Rightarrow r=0 \Rightarrow n=x\cdot \ord a\Rightarrow \ord a|n$
 \end{proof}
 \end{thm}
 
-\begin{thm}
+\begin{thm}\label{power-order-of-group}
 $a^{\operatorname{ord}G}=e$
 \begin{proof}
 $\ord a| \ord \mathcal{G}\Rightarrow \ord \mathcal{G}=x\cdot\ord a\Rightarrow a^{\ord \mathcal{G}}=(a^{\ord a})^x=e$
 
 \end{proof}
 \end{thm}
-
+\textcolor{red}{
 \begin{exm}
 $\mathcal{A}_5$ - группа чётных перестановок из 5 элементов. В $\mathcal{A}_5$ нет нормальных подгрупп
 \begin{proof}
 ДОКАЖИ ДОМА)))))))))))))))))
 \end{proof}
-\end{exm}
+\end{exm}}
+
 
 \begin{thm}
 Любая подгруппа индекса 2 является нормальной
@@ -513,6 +514,7 @@ $a\mathcal{H}=\bigslant{\mathcal{G}}{\mathcal{H}}$
 $\mathcal{H}a=\bigslant{\mathcal{G}}{\mathcal{H}}$
 \end{enumerate}
 \end{enumerate}
+\textcolor{red}{Что и зачем}
 \end{proof}
 \end{thm}
 \end{document}
