--- a/exam/question5.tex
+++ b/exam/question5.tex
@@ -30,6 +30,7 @@ $$(a_{1}a_{2}...a_{m})(a_{m+1}...a_{n-1})=(a_{1}a_{2}...a_{n-1})$$
 $$(a_{1}a_{2}...a_{m})(a_{m+1}...a_{n-1})a_n=
 (a_{1}a_{2}...a_{n-1})a_n=a_{1}a_{2}...a_{n}$$
 \end{enumerate}
+\textcolor{red}{по-моему он не так доказывал}
 \end{proof}
 \end{thm}
 \begin{dfn}[Нейтральный элемент]
