--- a/exam/question5.tex
+++ b/exam/question5.tex
@@ -33,9 +33,54 @@ $$(a_{1}a_{2}...a_{m})(a_{m+1}...a_{n-1})a_n=
 \textcolor{red}{по-моему он не так доказывал}
 \end{proof}
 \end{thm}
+\begin{thm}[как он доказывал]
+$\mathcal{A}$ - полугруппа, тогда значение любого терма не зависит от расстановки скобок
+\begin{proof}
+Индукция по длине терма (по количеству умножений)
+
+Базис: $\leq 1$, скобок нет
+
+Индукционный шаг: $t=t_1*t_2$, в $t_1,t_2$ меньше умножений
+
+$t_1(a_1,...,a_n)$
+
+$t_1(a_1,...,a_n)=(...((a_1*a_2)*a_3)...)*a_m$
+
+$t_2(a_1,...,a_n)$
+
+Индукция по $n-m$
+
+Базис: $t_2=a_n$
+$$t=t_1*a_n=(...((a_1*a_2)*a_3)...)*a_m)*a_n$$
+
+Индукционный шаг: $<n-m$
+
+\begin{multline*}
+t=t_1*t_2=\\(...((a_1*a_2)*a_3)...)*a_m)*(a_{m+1}*(a_{m+1}*(...*a_n)))=\\
+((...((a_1*a_2)*a_3)...)*a_m)*a_{m+1})*(a_{m+1}*(...*a_n))=\\
+(...((a_1*a_2)*a_3)...)*a_n
+\end{multline*}
+\end{proof}
+\end{thm}
+\begin{thm}
+$a^{n+m}=a^na^m$
+\begin{proof}
+$a^{n+m}=\underbrace{a...a}_{n+m}=\underbrace{a...a}_n\underbrace{a...a}_m=a^na^m$
+\end{proof}
+\end{thm}
+\begin{thm}
+Если операция коммутативна, то $(ab)^n=a^nb^n$
+\begin{proof}
+($ab)^{n}=\underbrace{ab...ab}_{n}=\underbrace{a...a}_n\underbrace{b...b}_n=a^nb^n$
+\end{proof}
+\end{thm}
+\begin{dfn}[Нейтральный слева]
+$e_l$ называется нейтральным слева в полугруппе, если $e_l*a=a$ для всех $a$,
+\end{dfn}
+\begin{dfn}[Нейтральный справа]
+$e_r$ называется нейтральным справа в полугруппе, если $a*e_r=a$ для всех $a$,
+\end{dfn}
 \begin{dfn}[Нейтральный элемент]
-$e_l$ называется \textbf{нейтральным слева} в полугруппе, если $e_l*a=a$ для всех $a$,
-$e_r$ называется \textbf{нейтральным справа} в полугруппе, если $a*e_r=a$ для всех $a$,
 $e$ - нейтральный слева и справа
 \end{dfn}
 \begin{exm}[Примеры нейтрального элемента]
@@ -96,20 +141,27 @@ $$((f\circ g)h)(a)=(f(g\circ h))(a)$$
 $(\omega;+)$ - $0$
 \end{exm}
 
+\begin{dfn}[Левый обратный элемент]
+$b_l$ - левый обратный для элемента $a$, если $b_l*a=e$
+\end{dfn}
+\begin{dfn}[Правый обратный элемент]
+$b_r$ - правый обратный для элемента $a$, если $a*b_l=e$
+\end{dfn}
 \begin{dfn}[Обратный элемент]
-
-$b_l$ - левый обратный для элемента $a$, если $b_l*a=e$,
-
-$b_r$ - правый обратный для элемента $a$, если $a*b_l=e$,
-
 $b$ - обратный для элемента $a$, если $b*a=a*b=e$
 \end{dfn}
-
 \begin{dfn}[Обратимый элемент]
 Элемент, для которого существует обратный
 \end{dfn}
+\begin{thm}
+Если $a$ обратим слева и справа, то он обратим и обратный элемент является единственным.
+\begin{proof}
+$$b_la=e,\quad ab_r=e$$
+$$b_l=b_le=b_l(ab_r)=(b_la)b_r=eb_r=b_r$$
+
+\end{proof}
+\end{thm}
 \begin{exm}
-Пример чего-то:
 Доказать что множество функций этого вида замкнуты относительно композиции:
 $$f(x)=
 \begin{cases}
