--- a/main/mystyle.sty
+++ b/main/mystyle.sty
@@ -71,6 +71,7 @@
 \newcommand{\bigslant}[2]{{\raisebox{.2em}{$#1$}\left/\raisebox{-.2em}{$#2$}\right.}}
 \newcommand{\eqtext}[1]{\ensuremath{\stackrel{\text{#1}}{=}}}
 \newcommand{\rightarrowtext}[1]{\ensuremath{\stackrel{\text{#1}}{\rightarrow}}}
+\newcommand{\morphtext}[1]{\ensuremath{\stackrel{\text{#1}}{\simeq}}}
 \def\dotminus{\mathbin{\ooalign{\hss\raise1ex\hbox{.}\hss\cr
   \mathsurround=0pt$-$}}}
 \DeclareMathOperator{\ind}{ind}
@@ -78,6 +79,7 @@
 \DeclareMathOperator{\Ker}{Ker}
 \DeclareMathOperator{\stab}{stab}
 \DeclareMathOperator{\orb}{orb}
+\DeclareMathOperator{\rng}{rng}
 \newcommand{\Mod}[1]{\ \text{mod}\ #1}
 
 
