--- a/exam/question9.tex
+++ b/exam/question9.tex
@@ -282,57 +282,6 @@ $a,b\in \mathcal{Z}$, $ab^{-1}\in \mathcal{Z}$
 \end{proof}
 \end{thm}
 
-\begin{dfn}[Циклическая группа]
-Циклическая группа - группа, порождённая одним элементом. $<a>$ - циклическая группа порождённая $a$.
-
-$(\omega,+,0)$ изоморфно бесконечной циклической группе
-
-моноид типа $(i,j)$ изоморфен конечной циклической группе
-\end{dfn}
-
-\begin{thm}
-$\mathcal{G}=\langle a\rangle$, тогда $\mathcal{G}\cong (\mathbb{Z},+)$ или  $\mathcal{G}\cong (\mathbb{Z}_n,+)$ для некоторого $n$
-\begin{proof}
-Пусть $\mathcal{M}$ - подмоноид, порождённый $a$. $M$ - циклический
-\begin{enumerate}
-\item $\mathcal{M} \cong (\omega,+,0)$
-
-$x\in \mathcal{M}$ $x^{-1}$ $xx^{-1}=e$
-
-$x\in \mathcal{M}$ $x\neq e$ $x^{-1}\neq \mathcal{M}$
-
-$$0=h(x)+h(x^{-1})=h(xx^{-1})=h(e)=0$$
-
-Доказать что изоморфизм
-\item $\mathcal{M}$ - конечный $(i,j)$ моноид, если $i>0$, то в $\mathcal{M}$ есть нееденичный идемпотент, следовательно он необратимый, следовательно в группе должно быть $i=0$
-$$a^xa^y=\begin{cases} a^{x+y} &,\mbox{если } x+y<j\\
-a^{(x+y)\pmod j}&,\mbox{если } x+y\geq j\end{cases}$$
-$\mathcal{M}$ - группа
-$$a^x=a^{j-x}=a^{j\pmod j}=e$$
-$\mathcal{M}$ - группа порождённая $a$, $\mathcal{M}=\mathcal{G}$
-
-$h:a^x\rightarrow x$
-\end{enumerate}
-\end{proof}
-\end{thm}
-\begin{thm}
-В циклической группе существуют нетривиальные группы тогда и только тогда когда она бесконечна или $n$ в $(\mathbb{Z}_n,+)$ составное 
-\begin{proof}
-\begin{enumerate}
-\item $\Rightarrow$ пусть имеется $(\mathbb{Z}_n,+)$, $n$ - простое, $a\neq 0$, $a<n$, $a$ и $n$ взаимно простые, следовательно $xa+yn=1$. пусть $b\in \mathbb{Z}$, тогда 
-$$b=b\cdot 1=b(ax+yn)=(bx)a+(by)n$$
-$$(\underbrace{a+a+...+a}_{bx})\mod n=(b-(by)n)\mod n=b\mod n=b$$
-
-Таким (КАКИМ) образом любые подгруппы, содержащие не только $0$ содержат $\mathbb{Z}_n$
-\item $\Leftarrow$ 
-\begin{enumerate}
-    \item бесконечная циклическая группа имеет нетривиальную подгруппу
-    \item пусть $n=xy$, тогда $(\mathbb{Z}_{xy},+)\supseteq \{0,x,2x,...,(y-1)x\}$
-  \end{enumerate}
-\end{enumerate}
-\end{proof}
-\end{thm}
-
 \begin{dfn}[Порядок группы]
 Порядок группы - количество элементов группы. $ord\mathcal{G}$
 \end{dfn}
@@ -394,7 +343,9 @@ $$s_i\langle r_1\rangle=\langle r_1\rangle s_i$$
 $\langle r_1\rangle$ - нормальная подгруппа
 
 \end{exm}
-
+\begin{cnsq}
+Если группа $\mathcal{G}$ - абелева, то любая подгруппа - нормальная.
+\end{cnsq}
 \begin{thm}
 Если $\mathcal{G}$ - группа, $\mathcal{H}\subseteq \mathcal{G}$, и $\equiv$ - отношение принадлежности к одному левому смежному классу, то $\equiv$ - отношение эквивалентности
 \begin{proof}
